<resources>
    <string name="app_name" translatable="false">Practica1</string>
    <string name="autor" translatable="false">Erick Rodrigo M. Pineda</string>
    <string name="version" translatable="false">1.1.0</string>

    <!--    Strings main activity-->
    <string name="ma_title">Selecciona Una Formula</string>
    <string name="ma_btn_calcular">Calcular</string>

    <!--    string activity 2-->
    <string name="ma2_titulo">El resultado de la formula es:</string>

    <!--    Strings datos-->
    <string name="datos_a" translatable="false">Dato 1</string>
    <string name="datos_b" translatable="false">Dato 2</string>
    <string name="datos_c" translatable="false">Dato 3</string>
    <string name="datos_hint">Ingresa un número</string>

    <!--    valores Array-->
    <string name="array_0">Selecciona...</string>
    <string name="array_1">Volumen Cilindro</string>
    <string name="array_2">Volumen Piramide</string>
    <string name="array_3">Binomio al cuadrado</string>
    <string name="array_4">Binomio al cubo</string>

    <!--strings medidas    -->
    <string name="altura">Altura</string>
    <string name="radio">Radio</string>
    <string name="lados"># Lados</string>
    <string name="lado">Lado</string>
    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>

<!--    strings alerts-->
    <string name="error_formula">Elije una formula</string>
    <string name="error_negativo">No hay longitud Negativa</string>
    <string name="error_lados">Ingresa 3 o 4 lados</string>
</resources>